--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "financial_services"]
 	path = financial_services
 	url = https://github.com/UniversalBinary/financial_services.git
+[submodule "messaging_services"]
+	path = messaging_services
+	url = https://github.com/UniversalBinary/messaging_services.git
