--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ dist: xenial
 
 before_install:
   - sudo apt-get update
+  - sudo apt-get -fmy install pkg-config
   - sudo apt-get -fmy install libssl-dev
   - sudo apt-get -fmy install libcpprest-dev
   - sudo apt-get -fmy install libasound2-dev
